...
import 'package:general/widgets/button.dart';

class RadioSelectWidget extends StatefulWidget {
  const RadioSelectWidget({Key? key}) : super(key: key);

  final List<String> tradeTypes = const [
    "Painting",
    "Tiler",
    "Carpenter",
    "Cleaner",
    "Designer",
    "Landscaper",
    "Electrician",
...
      ),
      //***********************buttons******************** */
      actions: [
        Center(
          child: Column(
            children: [
              ButtonWidget(text: "Submit", function: _submit),
              const Padding(padding: EdgeInsets.all(5)),
              ButtonWidget(
                text: "Cancel",
                function: _cancel,
                color: "light",
                border: "lightBlue",
...
